objects/L2I_Deal_Summary__c.object
<CustomObject>
    <fields>
        <fullName>L2I_PTS_Concessions__c</fullName>
        <label>xxx Concessions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_PTS_End_Date__c</fullName>
        <label>xxx End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2I_PTS_Escalation_Start_Date__c</fullName>
        <label>PTS : Escalation Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2I_PTS_Escalation__c</fullName>
        <label>PTS : Escalation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2I_PTS_Fixed_Pricing__c</fullName>
        <label>xxx Fixed Pricing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_PTS_Renewal_Duration_Months__c</fullName>
        <label>xxx Renewal Duration (Months)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_PTS_Renewal__c</fullName>
        <label>xxx Renewal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_PTS_SLA_Guarantee__c</fullName>
        <label>PTS : Delivery/SLA Guarantee</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2I_PTS_SLA_Penalties__c</fullName>
        <label>SLA Penalties</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_PTS_SLA_Penalty_Cap_Amount__c</fullName>
        <label>xxx SLA Penalty Cap Amount</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2I_PTS_SLA_Penalty_Cap_Type__c</fullName>
        <label>xxx SLA Penalty Cap Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>%</fullName>
                </value>
                <value>
                    <fullName>$</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_PTS_SLA_Penalty_Cap__c</fullName>
        <label>PTS : Delivery/SLA Penalty Cap</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2I_PTS_Service_Term_Months__c</fullName>
        <label>PTS : Service Term (Months)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2I_PTS_Service_Types__c</fullName>
        <label>PTS : Service Types</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2I_PTS_Service_Types_old__c</fullName>
        <label>PTS Service Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PTS_Service_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_PTS_Services_End_Date__c</fullName>
        <formula>TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>xxx Services End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2I_PTS_Services_Start_Date__c</fullName>
        <label>PTS : Services Start Date</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2I_PTS_Status_Explanation_Add_l_Details__c</fullName>
        <label>PTS: Status Explanation Add&#39;l Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2I_PTS_Status_Explanation__c</fullName>
        <label>PTS: Status Explanation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_PTS_Status__c</fullName>
        <label>PTS: Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_PTS_Summary_of_Incentives__c</fullName>
        <label>PTS : Summary of Incentives</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2I_PTS_Total_Value_of_Other_Concessions__c</fullName>
        <label>PTS : Total Value of Other Concessions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2I_P_L_Approval__c</fullName>
        <label>P&amp;L Approval</label>
        <referenceTo>L2I_P_L_Approval__c</referenceTo>
        <relationshipLabel>Deal Summaries</relationshipLabel>
        <relationshipName>Deal_Summaries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>L2I_Payment_Term__c</fullName>
        <formula>TEXT(L2I_Deal_Account__r.L2I_Payment_Term__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Term</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Products_Services_Road_Map__c</fullName>
        <label>Products/Services Road Map</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>≤ 1 YR</fullName>
                </value>
                <value>
                    <fullName>&gt; 1 YR but ≤ 2 YRS</fullName>
                </value>
                <value>
                    <fullName>&gt; 2 YRS but ≤ 3 YRS</fullName>
                </value>
                <value>
                    <fullName>&gt; 3 YRS</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <isActive>false</isActive>
                    <label>None</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Program_Numbers__c</fullName>
        <label>xxx Program Numbers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2I_Purchase_Model__c</fullName>
        <label>Purchase Model</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACS</fullName>
                </value>
                <value>
                    <fullName>AME</fullName>
                </value>
                <value>
                    <fullName>BFE</fullName>
                </value>
                <value>
                    <fullName>CSE</fullName>
                </value>
                <value>
                    <fullName>SFE</fullName>
                </value>
                <value>
                    <fullName>SPB</fullName>
                </value>
                <value>
                    <fullName>SSBFE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_SAAS_Status_Explanation__c</fullName>
        <label>SAAS: Status Explanation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_SAAS_Status__c</fullName>
        <label>SAAS: Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_SDK_Status_Explanation_Add_l_Details__c</fullName>
        <label>SDK: Status Explanation Add&#39;l Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2I_SDK_Status_Explanation__c</fullName>
        <label>SDK: Status Explanation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_SDK_Status__c</fullName>
        <label>SDK: Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Shipping_Incoterms__c</fullName>
        <formula>Text(L2I_DealOpportunity__r.L2I_Shipping_Incoterm__c)</formula>
        <label>Shipping/Incoterms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Spares_Pricing_Contract_Terms__c</fullName>
        <label>Spares Pricing Contract Terms</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2I_Standard_In_Warranty_TAT__c</fullName>
        <label>xxxStandard In Warranty TAT</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2I_Total_Value__c</fullName>
        <label>Total Value</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>≤ $100K USD</fullName>
                </value>
                <value>
                    <fullName>&gt; $100K but ≤ $250K USD</fullName>
                </value>
                <value>
                    <fullName>&gt; $250K but ≤ $500K USD</fullName>
                </value>
                <value>
                    <fullName>&gt; $500K but ≤ $1M USD</fullName>
                </value>
                <value>
                    <fullName>&gt; $1M but ≤ $5M USD</fullName>
                </value>
                <value>
                    <fullName>&gt; $5M but ≤ $10M USD</fullName>
                </value>
                <value>
                    <fullName>&gt; $10M but ≤ $25M USD</fullName>
                </value>
                <value>
                    <fullName>&gt; $25M but ≤ $50M USD</fullName>
                </value>
                <value>
                    <fullName>&gt; $50M but ≤ $75M USD</fullName>
                </value>
                <value>
                    <fullName>&gt; $75M but ≤ $100M USD</fullName>
                </value>
                <value>
                    <fullName>&gt; 100M USD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Total_Value_of_Custom_SW_Development__c</fullName>
        <label>Total Value of Custom SW Development</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2I_VIP_VVIP__c</fullName>
        <label>VIP/VVIP</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2I_Warranty_Start_Date__c</fullName>
        <label>xxx Warranty Start Date</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OneMedia_Status_Explanation_Add_l_Detai__c</fullName>
        <label>OneMedia:Status Explanation Add&#39;l Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Products_Services_Desc_Avail_Contracts__c</fullName>
        <inlineHelpText>All Products/Services Descriptions Available for Contract Exhibits</inlineHelpText>
        <label>Products/Services Desc. Avail Contracts</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAAS_Status_Explanation_Add_l_Details__c</fullName>
        <label>SAAS: Status Explanation Add&#39;l Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SWE_Cloud_Team_Resources_Available__c</fullName>
        <inlineHelpText>SWE/Cloud Team Confirmed All Available Resources (Internal and External)</inlineHelpText>
        <label>SWE/Cloud Team Resources Available</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Opportunities__c</fullName>
        <formula>HYPERLINK(&quot;/apex/gblite__Grid?gname=Sales Opportunities&amp;fpf=L2I_P_L_Approval__c&amp;fpv=&quot; &amp; L2I_P_L_Approval__c, &quot;Sales Opportunities&quot;, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Opportunities</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X3rd_Party_Vendors_Engaged_Supply_Chain__c</fullName>
        <inlineHelpText>All Third Party Vendors Engaged in PAC Supply Chain</inlineHelpText>
        <label>3rd Party Vendors Engaged Supply Chain</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xL2I_DSS_Service_Types__c</fullName>
        <label>DSS Service Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>DSS_Service_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>xL2I_IFEC_Hardware_System_Type__c</fullName>
        <label>Hardware System Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Hardware_System_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>xL2I_PTS_Service_Types__c</fullName>
        <label>PTS Service Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PTS_Service_Types</valueSetName>
        </valueSet>
    </fields>
    <label>Deal Summary</label>
    <nameField>
        <displayFormat>DS-{00000}</displayFormat>
        <label>Deal Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Summaries</pluralLabel>
    <recordTypes>
        <fullName>Approved</fullName>
        <active>true</active>
        <label>Approved</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pending</fullName>
        <active>true</active>
        <label>Pending</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>L2I_All_Products_Services_CurrentlyAvail</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
ISPICKVAL(L2I_P_L_Approval__r.L2I_Revision_Status__c,&quot;Contract Signed&quot;),
ISPICKVAL(All_Products_Services_Currently_Availabl__c, &quot;No&quot;),
ISBLANK(TEXT(L2I_Products_Services_Road_Map__c))
)</errorConditionFormula>
        <errorDisplayField>L2I_Products_Services_Road_Map__c</errorDisplayField>
        <errorMessage>Please provide a Products/Services Road Map</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2I_DSS_Escalation_Start_Date_Required</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
INCLUDES( L2I_P_L_Approval__r.L2I_Financials_Included__c, &quot;DSS&quot;),
ISPICKVAL( L2I_DSS_Escalation__c , &quot;Yes&quot; ),
ISPICKVAL (L2I_P_L_Approval__r.L2I_Revision_Status__c,&quot;Award&quot;)||
ISPICKVAL (L2I_P_L_Approval__r.L2I_Revision_Status__c,&quot;Contract Signed&quot;),

ISBLANK(Text(L2I_DSS_Escalation_Start_Date__c ))
)</errorConditionFormula>
        <errorDisplayField>L2I_DSS_Escalation_Start_Date__c</errorDisplayField>
        <errorMessage>Please provide an Escalation Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2I_DSS_Fixed_Pricing_Required</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
INCLUDES( L2I_P_L_Approval__r.L2I_Financials_Included__c, &quot;DSS&quot;),
ISPICKVAL( L2I_DSS_Fixed_Pricing__c , &quot;Yes&quot; ),
ISPICKVAL (L2I_P_L_Approval__r.L2I_Revision_Status__c,&quot;Award&quot;)||
ISPICKVAL (L2I_P_L_Approval__r.L2I_Revision_Status__c,&quot;Contract Signed&quot;),

ISBLANK(Text( L2I_DSS_End_Date__c ))
)</errorConditionFormula>
        <errorDisplayField>L2I_DSS_End_Date__c</errorDisplayField>
        <errorMessage>Please provide an End Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2I_DSS_Other_Concessions_Required</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
INCLUDES( L2I_P_L_Approval__r.L2I_Financials_Included__c, &quot;DSS&quot;),
ISPICKVAL( L2I_DSS_Concessions__c , &quot;Yes&quot; ),
ISPICKVAL (L2I_P_L_Approval__r.L2I_Revision_Status__c,&quot;Award&quot;)||
ISPICKVAL (L2I_P_L_Approval__r.L2I_Revision_Status__c,&quot;Contract Signed&quot;),

ISBLANK(Text( L2I_DSS_Total_Value_of_Other_Concessions__c  ))
)</errorConditionFormula>
        <errorDisplayField>L2I_DSS_Total_Value_of_Other_Concessions__c</errorDisplayField>
        <errorMessage>Please provide the Total Value of Other Concessions</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2I_DSS_Penalty_Cap_Fields_Required</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
INCLUDES( L2I_P_L_Approval__r.L2I_Financials_Included__c, &quot;DSS&quot;),
ISPICKVAL( L2I_DSS_SLA_Penalties__c , &quot;Yes&quot;),
ISPICKVAL (L2I_P_L_Approval__r.L2I_Revision_Status__c,&quot;Award&quot;)||
ISPICKVAL (L2I_P_L_Approval__r.L2I_Revision_Status__c,&quot;Contract Signed&quot;),

OR(ISBLANK(TEXT( L2I_DSS_SLA_Penalty_Cap__c )),
ISBLANK(TEXT(L2I_DSS_SLA_Penalty_Cap_Type__c)),
ISBLANK(TEXT( L2I_DSS_SLA_Penalty_Cap_Amount__c ))
))</errorConditionFormula>
        <errorDisplayField>L2I_DSS_SLA_Penalty_Cap__c</errorDisplayField>
        <errorMessage>You must fill out the SLA Penalty Cap, SLA Penalty Cap Type and SLA Penalty Cap Amount fields</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2I_DSS_Renewal_Duration_Required</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
INCLUDES( L2I_P_L_Approval__r.L2I_Financials_Included__c, &quot;DSS&quot;),
ISPICKVAL( L2I_DSS_Renewal__c , &quot;Yes&quot; ),
ISPICKVAL (L2I_P_L_Approval__r.L2I_Revision_Status__c,&quot;Award&quot;)||
ISPICKVAL (L2I_P_L_Approval__r.L2I_Revision_Status__c,&quot;Contract Signed&quot;),

ISBLANK(Text(L2I_DSS_Renewal_Duration_Months__c))
)</errorConditionFormula>
        <errorDisplayField>L2I_DSS_Renewal_Duration_Months__c</errorDisplayField>
        <errorMessage>Please provide a Renewal Duration in Months</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2I_Expect_Future_Sales_Forecast_Req</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
ISPICKVAL(L2I_P_L_Approval__r.L2I_Revision_Status__c,&quot;Contract Signed&quot;),
ISPICKVAL(  L2I_Expecting_Future_Sales__c  , &quot;Yes&quot;),
ISBLANK(TEXT(L2I_Forecast__c))
)</errorConditionFormula>
        <errorDisplayField>L2I_Forecast__c</errorDisplayField>
        <errorMessage>Please provide a Forecast for Expected Future Sales</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2I_IFEC_Delivery_Penalties_Cap_Required</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
INCLUDES( L2I_P_L_Approval__r.L2I_Financials_Included__c, &quot;IFEC&quot;),
ISPICKVAL(L2I_IFEC_Delivery_Penalties__c , &quot;Yes&quot;),
ISPICKVAL (L2I_P_L_Approval__r.L2I_Revision_Status__c,&quot;Award&quot;)||
ISPICKVAL (L2I_P_L_Approval__r.L2I_Revision_Status__c,&quot;Contract Signed&quot;), 

OR(ISBLANK(TEXT(L2I_IFEC_Delivery_Penalty_Cap__c)),
ISBLANK(L2I_IFEC_Delivery_Penalty_Cap_Amount__c),
ISBLANK(TEXT(L2I_IFEC_Delivery_Penalty_Cap_Type__c))
))</errorConditionFormula>
        <errorDisplayField>L2I_IFEC_Delivery_Penalties__c</errorDisplayField>
        <errorMessage>You must fill out the Delivery Penalties Cap, Delivery Penalty Cap Type and Delivery Penalty Cap Amount fields</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2I_IFEC_End_Date_Required</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
INCLUDES( L2I_P_L_Approval__r.L2I_Financials_Included__c, &quot;IFEC&quot;),
ISPICKVAL( L2I_IFEC_Fixed_Pricing__c  , &quot;Yes&quot;),
ISPICKVAL (L2I_P_L_Approval__r.L2I_Revision_Status__c,&quot;Award&quot;)||
ISPICKVAL (L2I_P_L_Approval__r.L2I_Revision_Status__c,&quot;Contract Signed&quot;), 

ISBLANK( L2I_IFEC_End_Date__c )
)</errorConditionFormula>
        <errorDisplayField>L2I_IFEC_End_Date__c</errorDisplayField>
        <errorMessage>You must provide an End Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2I_IFEC_Escalation_Start_Date_Required</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
INCLUDES( L2I_P_L_Approval__r.L2I_Financials_Included__c, &quot;IFEC&quot;),
ISPICKVAL (L2I_P_L_Approval__r.L2I_Revision_Status__c,&quot;Award&quot;)||
ISPICKVAL (L2I_P_L_Approval__r.L2I_Revision_Status__c,&quot;Contract Signed&quot;), 

ISPICKVAL(L2I_IFEC_Escalation__c , &quot;Yes&quot;),
ISBLANK(L2I_IFEC_Escalation_Start_Date__c  ))</errorConditionFormula>
        <errorDisplayField>L2I_IFEC_Escalation_Start_Date__c</errorDisplayField>
        <errorMessage>You must provide an Escalation Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2I_Legal_Considerations_Required</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
ISPICKVAL (L2I_P_L_Approval__r.L2I_Revision_Status__c,&quot;Award&quot;)||
ISPICKVAL (L2I_P_L_Approval__r.L2I_Revision_Status__c,&quot;Contract Signed&quot;),
OR(
ISBLANK(TEXT(Form_Agreement_Available_for_All_Product__c)),
ISBLANK(TEXT(Products_Services_Desc_Avail_Contracts__c)),
ISBLANK(TEXT(X3rd_Party_Vendors_Engaged_Supply_Chain__c)),
ISBLANK(TEXT(Any_New_Corp_Entities_Branch_Off_Needed__c)),
ISBLANK(TEXT(L2IAny_New_Product_Certifications_Needed__c)),
ISBLANK(TEXT(L2I_Any_New_Regulatory_Approvals_Needed__c))
)
)</errorConditionFormula>
        <errorDisplayField>Form_Agreement_Available_for_All_Product__c</errorDisplayField>
        <errorMessage>At this stage in the process all Legal Consideration fields are required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2I_New_or_Existing_Customer_Logic</fullName>
        <active>false</active>
        <description>New or Existing Account Field required when the P&amp;L Approval &quot;Revision Status&quot; field = Award or Contract Signed</description>
        <errorConditionFormula>AND(ISPICKVAL(L2I_P_L_Approval__r.L2I_Revision_Status__c, &quot;Award&quot;)||
ISPICKVAL(L2I_P_L_Approval__r.L2I_Revision_Status__c, &quot;Contract Signed&quot;),
ISBLANK(TEXT(L2I_New_or_Existing_Account__c)))</errorConditionFormula>
        <errorDisplayField>L2I_New_or_Existing_Account__c</errorDisplayField>
        <errorMessage>You must select New or Existing Account when the P&amp;L Revision Status is Award or Contract Signed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2I_PO_Issuer_Required</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
ISPICKVAL(L2I_P_L_Approval__r.L2I_Revision_Status__c,&quot;Contract Signed&quot;),
ISPICKVAL( L2I_Is_PO_Issuer_Same_As_Account__c , &quot;No&quot;),
ISBLANK( L2I_PO_Issuer__c )
)</errorConditionFormula>
        <errorDisplayField>L2I_PO_Issuer__c</errorDisplayField>
        <errorMessage>Please provide a PO Issuer</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2I_PTS_Escalation_Start_Date_Required</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
INCLUDES( L2I_P_L_Approval__r.L2I_Financials_Included__c, &quot;PTS&quot;),
ISPICKVAL( L2I_PTS_Escalation__c , &quot;Yes&quot; ),
ISPICKVAL (L2I_P_L_Approval__r.L2I_Revision_Status__c,&quot;Award&quot;)||
ISPICKVAL (L2I_P_L_Approval__r.L2I_Revision_Status__c,&quot;Contract Signed&quot;),

ISBLANK(Text(L2I_PTS_Escalation_Start_Date__c ))
)</errorConditionFormula>
        <errorDisplayField>L2I_PTS_Escalation_Start_Date__c</errorDisplayField>
        <errorMessage>Please provide an Escalation Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2I_PTS_Fixed_Pricing_Required</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
INCLUDES( L2I_P_L_Approval__r.L2I_Financials_Included__c, &quot;PTS&quot;),
ISPICKVAL( L2I_PTS_Fixed_Pricing__c , &quot;Yes&quot; ),
ISPICKVAL (L2I_P_L_Approval__r.L2I_Revision_Status__c,&quot;Award&quot;)||
ISPICKVAL (L2I_P_L_Approval__r.L2I_Revision_Status__c,&quot;Contract Signed&quot;),

ISBLANK(Text( L2I_PTS_End_Date__c ))
)</errorConditionFormula>
        <errorDisplayField>L2I_PTS_End_Date__c</errorDisplayField>
        <errorMessage>Please provide an End Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2I_PTS_Other_Concessions_Required</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
INCLUDES( L2I_P_L_Approval__r.L2I_Financials_Included__c, &quot;PTS&quot;),
ISPICKVAL( L2I_PTS_Concessions__c , &quot;Yes&quot; ),
ISPICKVAL (L2I_P_L_Approval__r.L2I_Revision_Status__c,&quot;Award&quot;)||
ISPICKVAL (L2I_P_L_Approval__r.L2I_Revision_Status__c,&quot;Contract Signed&quot;),

ISBLANK(Text( L2I_PTS_Total_Value_of_Other_Concessions__c  ))
)</errorConditionFormula>
        <errorDisplayField>L2I_PTS_Total_Value_of_Other_Concessions__c</errorDisplayField>
        <errorMessage>Please provide the Total Value of Other Concessions</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2I_PTS_Penalty_Cap_Fields_Required</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
INCLUDES( L2I_P_L_Approval__r.L2I_Financials_Included__c, &quot;PTS&quot;),
ISPICKVAL( L2I_PTS_SLA_Penalties__c , &quot;Yes&quot;),
ISPICKVAL (L2I_P_L_Approval__r.L2I_Revision_Status__c,&quot;Award&quot;)||
ISPICKVAL (L2I_P_L_Approval__r.L2I_Revision_Status__c,&quot;Contract Signed&quot;),

OR(ISBLANK(TEXT( L2I_PTS_SLA_Penalty_Cap__c )),
ISBLANK(TEXT(L2I_PTS_SLA_Penalty_Cap_Type__c)),
ISBLANK(TEXT( L2I_PTS_SLA_Penalty_Cap_Amount__c ))
))</errorConditionFormula>
        <errorDisplayField>L2I_PTS_SLA_Penalty_Cap__c</errorDisplayField>
        <errorMessage>You must fill out the SLA Penalty Cap, SLA Penalty Cap Type and SLA Penalty Cap Amount fields</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2I_PTS_Renewal_Duration_Required</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
INCLUDES( L2I_P_L_Approval__r.L2I_Financials_Included__c, &quot;PTS&quot;),
ISPICKVAL( L2I_PTS_Renewal__c , &quot;Yes&quot; ),
ISPICKVAL (L2I_P_L_Approval__r.L2I_Revision_Status__c,&quot;Award&quot;)||
ISPICKVAL (L2I_P_L_Approval__r.L2I_Revision_Status__c,&quot;Contract Signed&quot;),

ISBLANK(Text(L2I_PTS_Renewal_Duration_Months__c))
)</errorConditionFormula>
        <errorDisplayField>L2I_PTS_Renewal_Duration_Months__c</errorDisplayField>
        <errorMessage>Please provide a Renewal Duration in Months</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2I_Shipset_Credit_Fields_Required</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
INCLUDES( L2I_P_L_Approval__r.L2I_Financials_Included__c, &quot;IFEC&quot;),
ISPICKVAL( L2I_IFEC_Shipset_Credit__c, &quot;Yes&quot;),
ISPICKVAL (L2I_P_L_Approval__r.L2I_Revision_Status__c,&quot;Award&quot;)||
ISPICKVAL (L2I_P_L_Approval__r.L2I_Revision_Status__c,&quot;Contract Signed&quot;), 
OR(
ISBLANK(L2I_IFEC_Shipset_Credit_Trigger__c),
ISBLANK(L2I_IFEC_Validity_Period__c), 
ISBLANK(L2I_IFEC_Total_Values_of_Shipset_Credits__c)) )</errorConditionFormula>
        <errorDisplayField>L2I_IFEC_Shipset_Credit__c</errorDisplayField>
        <errorMessage>Please provide a Shipset Credit Trigger, Validity Period and Total Value of Shipset Credits</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2I_Total_Value_Of_Cust_SW_Dev_Req</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
ISPICKVAL(L2I_P_L_Approval__r.L2I_Revision_Status__c,&quot;Contract Signed&quot;),
ISPICKVAL( L2I_Any_Custom_SW_Development__c , &quot;Yes&quot;),
ISBLANK(TEXT( L2I_Total_Value_of_Custom_SW_Development__c))
)</errorConditionFormula>
        <errorDisplayField>L2I_Total_Value_of_Custom_SW_Development__c</errorDisplayField>
        <errorMessage>Please provide the Total Value of Custom Software Development needed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2I_Total_Values_Other_Concessions_Req</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
INCLUDES( L2I_P_L_Approval__r.L2I_Financials_Included__c, &quot;IFEC&quot;),
ISPICKVAL(L2I_IFEC_Other_Concessions__c, &quot;Yes&quot; ),
ISPICKVAL (L2I_P_L_Approval__r.L2I_Revision_Status__c,&quot;Award&quot;)||
ISPICKVAL (L2I_P_L_Approval__r.L2I_Revision_Status__c,&quot;Contract Signed&quot;), 

ISBLANK( L2I_IFECTotal_Value_of_Other_Concessions__c )
)</errorConditionFormula>
        <errorDisplayField>L2I_IFECTotal_Value_of_Other_Concessions__c</errorDisplayField>
        <errorMessage>Please provide the Total Value of Other Concessions</errorMessage>
    </validationRules>
</CustomObject>